<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">OnlineApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="exit">выход</string>
	<string name="about">О приложении</string>
	<string name="settings">Настройки</string>
	<string name="profile">Профиль</string>
	<string name="watch_later">Смотреть позже</string>
	<string name="favourites">Избранное</string>
	<string name="my_orders">Покупки</string>
	<string name="watches">История просмотров</string>
	<string name="home">Главная</string>
	<string name="movie">Кино</string>
	<string name="tv_series">Сериалы</string>
	<string name="hint_ur_mail">Ваш e-mail</string>
	<string name="hint_password">Пароль</string>
	<string name="singin">Войти</string>
	<string name="enable_background_audio">Play in background</string>
	<string name="video">Video</string>
	<string name="audio">Audio</string>
	<string name="text">Text</string>
	<string name="logging">Logging</string>
	<string name="logging_normal">Normal</string>
	<string name="logging_verbose">Verbose</string>
	<string name="retry">Retry</string>
	<string name="off">[off]</string>
	<string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
	<string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
	<string name="error_drm_unknown">An unknown DRM error occurred</string>
	<string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
	<string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
	<string name="error_querying_decoders">Unable to query device decoders</string>
	<string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
	<string name="storage_permission_denied">Permission to access storage was denied</string>
	<string name="video_name">Название фильма</string>
	<string name="video_desc">Действие фильма начинается в 1981 году в Сан-Франциско, Калифорния. Линда и Крис Гарднер живут в маленькой квартире с их сыном Кристофером. Крис-старший потратил все семейные сбережения на франшизу по продаже переносных денситометров. Эти сканирующие устройства предоставляли немного более чёткие снимки, чем рентгеновские аппараты, но большинство докторов, которых посещал Крис, считали, что устройства слишком дорогие.</string>
	<string name="watch_price">Смотреть от %1$s сум</string>
	<string name="trailer">Трейлер</string>
	<string name="share_via">share via</string>
	<string name="share_content">Очень советую посмотреть фильм %1$s на OnlineApp: http://172.20.16.4/%2$s</string>
	<string name="registration">Регистрация</string>
	<string name="first_name">First name</string>
	<string name="last_name">Last name</string>
	<string name="login">Login</string>
	<string name="email">Email</string>
	<string name="birth_date">Birthdate</string>
	<string name="birth_date_format">d MMMM yyyy\' года\'</string>
	<string name="gender">Gender</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="date_time_format">dd.MM.yyyy HH:ss</string>
	<string name="server_ip">server ip</string>
	<string name="see_all">смотреть все</string>
	<string name="leave_review">Оставить отзыв</string>
	<string name="phone_number">Phone number</string>
	<string name="no_comment">Комментариев пока нет, будьте первым</string>
	<string name="hint_confirm_password">Подтвердите пароль</string>
	<string name="tariff">Тариф</string>
	<string name="new_tariff">Новый</string>
	<string name="subscribe">Подписаться</string>
	<string name="back">Назад</string>
	<string name="fill_field">Заполните это поле</string>
	<string name="password_are_not_equals">Пароли не совпадают</string>
	<string name="buy">Купить</string>
	<string name="buy_details">Для просмотра вам необходимо оплатить услугу</string>
	<string name="season">Сезон</string>
	<string name="episodes">Эпизоды</string>
	<string name="guest">Гость</string>
	<string name="agreement">Соглашение</string>
</resources>