<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<!--<group android:checkableBehavior="single">-->


		<!--<item-->
				<!--android:id="@+id/watch_later"-->
				<!--android:icon="@drawable/ic_av_timer_black_36dp"-->
				<!--android:checkable="false"-->
				<!--android:title="@string/favourites"/>-->


	<!--</group>-->
	<group
			android:id="@+id/video_group">


		<item
				android:id="@+id/home"
				android:icon="@drawable/ic_home_black_36dp"
				android:checkable="false"
				android:title="@string/home"/>
		<item
				android:id="@+id/movies"
				android:icon="@drawable/ic_movie_black_36dp"
				android:checkable="false"
				android:title="@string/movie"/>

		<item
				android:id="@+id/tv_series"
				android:icon="@drawable/ic_subscriptions_black_36dp"
				android:checkable="false"
				android:title="@string/tv_series"/>

		<item
				android:id="@+id/settings"
				android:icon="@drawable/ic_settings_black_36dp"
				android:checkable="false"
				android:title="@string/settings"/>

		<!--<item-->
				<!--android:id="@+id/agreement"-->
				<!--android:icon="@drawable/ic_event_available_black_36dp"-->
				<!--android:checkable="false"-->
				<!--android:title="@string/agreement"/>-->

		<item
				android:id="@+id/about"
				android:icon="@drawable/ic_info_black_36dp"
				android:checkable="false"
				android:title="@string/about"/>


	</group>

	<group android:id="@+id/logout_group">
	<item
			android:id="@+id/logout"
			android:actionLayout="@color/color_primary"
			android:title="@string/exit"/>
</group>

		</menu>