<?xml version="1.0" encoding="utf-8"?>

	<FrameLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

	<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
	<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:background="@color/black"
			android:layout_height="?attr/actionBarSize"
			app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

		<ScrollView

				xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
		<android.support.v7.widget.CardView
				android:elevation="6dp"
				android:layout_margin="16dp"
				app:cardUseCompatPadding="true"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<LinearLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="match_parent">
				<LinearLayout
						android:padding="10dp"
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

					<android.support.design.widget.TextInputLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

						<android.support.design.widget.TextInputEditText
								android:hint="@string/first_name"
								android:textSize="20sp"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>
					</android.support.design.widget.TextInputLayout>


				</LinearLayout>

				<LinearLayout
						android:padding="10dp"
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

					<android.support.design.widget.TextInputLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

					<android.support.design.widget.TextInputEditText
							android:hint="@string/last_name"
							android:textSize="20sp"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"/>
					</android.support.design.widget.TextInputLayout>

				</LinearLayout>

				<LinearLayout
						android:padding="10dp"
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

					<android.support.design.widget.TextInputLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

						<android.support.design.widget.TextInputEditText
								android:hint="@string/login"
								android:textSize="20sp"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>
					</android.support.design.widget.TextInputLayout>

				</LinearLayout>
				<LinearLayout
						android:padding="10dp"
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">


					<android.support.design.widget.TextInputLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

						<android.support.design.widget.TextInputEditText
								android:hint="@string/email"
								android:textSize="20sp"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>
					</android.support.design.widget.TextInputLayout>



				</LinearLayout>
				<LinearLayout
						android:padding="10dp"
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

					<android.support.design.widget.TextInputLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

						<android.support.design.widget.TextInputEditText
								android:hint="@string/birth_date"
								android:textSize="20sp"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>
					</android.support.design.widget.TextInputLayout>


				</LinearLayout>

				<LinearLayout
						android:padding="10dp"
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

					<android.support.design.widget.TextInputLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

						<android.support.design.widget.TextInputEditText
								android:hint="@string/phone_number"
								android:textSize="20sp"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>
					</android.support.design.widget.TextInputLayout>



				</LinearLayout>

			</LinearLayout>


		</android.support.v7.widget.CardView>
		</ScrollView>

	</LinearLayout>

	<android.support.design.widget.FloatingActionButton
			android:id="@+id/fab"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|bottom"
			android:layout_margin="8dp"
			android:src="@drawable/ic_edit_white_24dp"
			app:layout_anchorGravity="center|right|end"
			app:fabSize="normal"
			app:borderWidth="0dp" />


	</FrameLayout>

