<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"

              android:layout_width="match_parent"
              android:layout_height="match_parent">

	<LinearLayout
			android:id="@+id/content"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

	<LinearLayout
			android:orientation="vertical"
			android:paddingTop="30dp"
			android:paddingLeft="30dp"
			android:paddingRight="30dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<TextView
			android:text="@string/buy"
			android:textSize="24sp"
			android:textColor="@color/accent_material_light"
			android:gravity="center_horizontal"
			android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>


	<TextView
			android:id="@+id/price"
			android:textColor="@color/material_blue_grey_800"
			android:textSize="20sp"
			android:gravity="center_horizontal"
			android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

	<TextView
			android:gravity="center_horizontal"
			android:text="@string/buy_details"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

	</LinearLayout>

		<LinearLayout
				android:orientation="horizontal"
				android:gravity="right"
				android:layout_marginRight="10dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
		<Button
				android:id="@+id/back"
				android:layout_marginTop="30dp"
				android:text="@string/back"
				android:background="@android:color/transparent"
				android:textColor="@color/accent_material_light"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

			<Button
				android:id="@+id/buy"
				android:layout_marginTop="30dp"
				android:text="@string/buy"
				android:background="@android:color/transparent"
				android:textColor="@color/accent_material_light"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>
	</LinearLayout>

	<ProgressBar
			android:id="@+id/progress"
			android:visibility="gone"
			android:layout_gravity="center"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
</FrameLayout>