<?xml version="1.0" encoding="utf-8"?>

<io.codetail.widget.RevealFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:showIn="@layout/login_view"
    android:layout_gravity="center"
    android:visibility="gone">
    <ScrollView
        android:id="@+id/register_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_login_login_color"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/register_title"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/registration"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/register_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="45"
                    android:src="@drawable/ic_add_white_24dp"
                    android:tint="@color/accent_material_light" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:errorTextAppearance="@style/TextAppearanceRegisterError"
                app:theme="@style/TextAppearanceLogin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:errorTextAppearance="@style/TextAppearanceRegisterError"
                app:theme="@style/TextAppearanceLogin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:errorTextAppearance="@style/TextAppearanceRegisterError"
                app:theme="@style/TextAppearanceLogin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:errorTextAppearance="@style/TextAppearanceRegisterError"
                app:theme="@style/TextAppearanceLogin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_pass_rep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:errorTextAppearance="@style/TextAppearanceRegisterError"
                app:theme="@style/TextAppearanceLogin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/register_btn"
                android:textColor="@color/white"
                android:text="@string/registration"
                android:textSize="20sp"
                android:background="@color/accent_material_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    </ScrollView>
</io.codetail.widget.RevealFrameLayout>