<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:orientation="vertical"
                                    app:cardUseCompatPadding="true"
                                    android:elevation="10dp"
                                    app:elevation="10dp"
                                    app:cardElevation="10dp"
                                    android:padding="16dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">


	<RelativeLayout
			android:layout_marginBottom="8dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
	<ScrollView
			android:layout_marginBottom="24dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

	<LinearLayout
			android:orientation="vertical"
			android:layout_margin="16dp"
			android:paddingBottom="20dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<TextView
				android:id="@+id/name"
				android:text="Простой"
				android:textSize="24sp"
				android:textColor="@color/black"
				android:gravity="center_horizontal"

				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>


		<TextView
				android:id="@+id/description"
				android:layout_marginTop="10dp"
				android:text="@string/video_desc"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
	</LinearLayout>

	</ScrollView>

	<Button
			android:id="@+id/back"
			android:layout_alignParentBottom="true"
			android:text="@string/back"
			android:background="@android:color/transparent"
			android:paddingLeft="6dp"
			android:paddingRight="6dp"
			android:textColor="@color/accent_material_light"
			android:layout_margin="16dp"
			android:layout_gravity="left|bottom"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

	<Button
			android:id="@+id/subscribe"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:text="@string/subscribe"
			android:background="@color/accent_material_light"
			android:paddingLeft="6dp"
			android:paddingRight="6dp"
			android:textColor="@color/white"
			android:layout_margin="16dp"
			android:layout_gravity="right|bottom"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</RelativeLayout>
</android.support.v7.widget.CardView>